--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.5",
     "passport": "^0.5.2",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "twitter-api-v2": "^1.14.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
